# packages-readline

./: .gitignore  CMakeLists.txt  Makefile.in  config.h.cmake  configure.in  readline.pl  readline4pl.c
cmake/: FindReadline.cmake
